agregado de carpeta de logotipos e integrantes (about)

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../media/logo_basic_white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../media/Logotipos/logo_basic_white.png" type="image/x-icon">
     <title>VANADIO Audiovisuales - Quiénes somos y qué hacemos | Sobre nosotros</title>
 </head>
 
@@ -33,7 +33,7 @@
                     <a href="./reel.html">Reel</a>
                 </div>
                 <a href="../index.html">
-                    <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img class="logoNav" src="../media/Logotipos/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
                 <div class="CajaNav">
                     <a href="./proyectos.html">Proyectos</a>
@@ -47,7 +47,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="../index.html">
-                        <img class="logoNav" src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                        <img class="logoNav" src="../media/Logotipos/logo_basic_white.png" alt="Vanadio Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapsibleNavbar">
@@ -125,26 +125,36 @@
             <h2 class="tituloIntegrantes">Quienes conforman VANADIO</h2>
             <div class="principal">
                 <section class="fundador">
-                    <img src="../media/facu.jpg" alt="Foto Fundador">
-                    <h3> Facundo 'Mandioca' Cordara</h3>
-                    <p> CEO / Fundador. Camarógrafo principal. Edición.</p>
+                    <img src="../media/Integrantes/Fundador_Facu.png" alt="Foto de Fundador Facundo Cordara">
+                    <h3> Facundo Cordara</h3>
+                    <p>Fundador</p>
                 </section>
             </div>
             <div class="secundario">
                 <section class="colaborador">
-                    <img src="../media/nacho.jpg" alt="Foto Colaborador 1">
-                    <h4>Ignacio 'Nachulio' Acuña </h4>
-                    <p>Colaborador frecuente. Camarógrafo secundario. </p>
+                    <img src="../media/Integrantes/Colaborador_Nacho.jpg" alt="Foto de Colaborador Ignacio Acuña">
+                    <h4>Ignacio Acuña</h4>
+                    <p>Director de fotografía - Camarógrafo - Editor</p>
                 </section>
                 <section class="colaborador">
-                    <img src="../media/nacho.jpg" alt="Foto Colaborador 2">
-                    <h4>Ignacio 'Nachulio' Acuña </h4>
-                    <p>Colaborador frecuente. Camarógrafo secundario. </p>
+                    <img src="../media/Integrantes/Colaborador_Miri.jpg" alt="Foto de Colaborador Miranda Di Gaeta">
+                    <h4>Miranda Di Gaeta</h4>
+                    <p>Fotógrafa - Editora</p>
                 </section>
                 <section class="colaborador">
-                    <img src="../media/nacho.jpg" alt="Foto Colaborador 3">
-                    <h4>Ignacio 'Nachulio' Acuña </h4>
-                    <p>Colaborador frecuente. Camarógrafo secundario.</p>
+                    <img src="../media/Integrantes/Colaborador_Iñaki.jpg" alt="Foto de Colaborador Iñaki Jabornik">
+                    <h4>Iñaki Jabornik</h4>
+                    <p>Fotógrafo - Editor</p>
+                </section>
+                <section class="colaborador">
+                    <img src="../media/Integrantes/Colaborador_Salo.jpg" alt="Foto de Colaborador Mellyid Salomón">
+                    <h4>Mellyid Salomón</h4>
+                    <p>Fotógrafo - Editor</p>
+                </section>
+                <section class="colaborador">
+                    <img src="../media/Integrantes/Colaborador_Lela.jpeg" alt="Foto de Colaborador Facundo Lelaneth">
+                    <h4>Facundo Lelaneth</h4>
+                    <p>Sonidista. Postproducción de sonido</p>
                 </section>
             </div>
 
@@ -166,7 +176,7 @@
             </div>
             <div class="logoFooter">
                 <a href="../index.html">
-                    <img src="../media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img src="../media/Logotipos/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
             <div class="infoFooter"><span>© VANADIO 2022.</span></div>
