--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="shortcut icon" href="./media/logo_basic_white.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./media/Logotipos/logo_basic_white.png" type="image/x-icon">
     <title>VANADIO Audiovisuales - Productora Audiovisual Argentina</title>
 </head>
 
@@ -33,7 +33,7 @@
                     <a href="./pages/reel.html">Reel</a>
                 </div>
                 <a href="#">
-                    <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img class="logoNav" src="./media/Logotipos/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
                 <div class="CajaNav">
                     <a href="./pages/proyectos.html">Proyectos</a>
@@ -47,7 +47,7 @@
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid">
                     <a href="#">
-                        <img class="logoNav" src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                        <img class="logoNav" src="./media/Logotipos/logo_basic_white.png" alt="Vanadio Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#collapsibleNavbar">
@@ -174,7 +174,7 @@
             </div>
             <div class="logoFooter">
                 <a href="../index.html">
-                    <img src="./media/logo_basic_white.png" alt="Vanadio Logo">
+                    <img src="./media/Logotipos/logo_basic_white.png" alt="Vanadio Logo">
                 </a>
             </div>
             <div class="infoFooter"><span>© VANADIO 2022.</span></div>
