Agregado de nuevos colores en variables, cambio de frase en contacto y colores de hover en todas las paginas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -81,8 +81,8 @@
         <main>
             <div class="bloqueContacto">
                 <section class="bloqueInfo">
-                    <h2>Queres contactarte con vanadio?</h2>
-                    <h2>Llená el siguiente formulario!</h2>
+                    <h2>Si tenés una idea,</h2>
+                    <h2>nos interesa escucharla!</h2>
                 </section>
                 <section class="bloqueForm">
                     <form method="post" enctype="application/x-www-form-urlencoded" action="/action_page.php">
