cambio de formato de titulo y subtitulo en index, diseño responsive y media queries modificadas. Cambio en tamaño de slideshow

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta name="description" content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
-    <meta name="keywords" content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
+    <meta name="description"
+        content="VANADIO es una productora audiovisual con base en Buenos Aires, Argentina. Nos dedicamos a la creacion de contenido del tipo de videoclips y timelapse para clientes exigentes y que quieran poseer una impronta unica es sus trabajos y proyectos">
+    <meta name="keywords"
+        content="audiovisual, vanadio, productora, argentina, imagen, imagenes, audio, video, camara, sonido, videos, videoclip, creador de contenido, grabacion, filmacion, timelapse, slow motion">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -22,7 +24,7 @@
     <div class="gridContainerIndex">
 
         <!-- ----------------HEADER---------------- -->
-        
+
         <header>
 
             <!-- ----------------NAVBAR WIDE---------------- -->
@@ -87,9 +89,12 @@
         <main>
 
             <!-- ----------------TITULO---------------- -->
-
-            <h1>VANADIO</h1>
-            <h2 class="subtituloVanadio">Audiovisuales</h2>
+            <div class="bloqueTitulo">
+                <section class="nombreVanadio">
+                    <h1>VANADIO</h1>
+                    <h2>Audiovisuales</h2>
+                </section>
+            </div>
 
             <!-- ---------------/TITULO---------------- -->
             <!-- -------------ÚLTIMO VIDEO------------- -->
@@ -133,7 +138,8 @@
                         <img src="./media/Frames Slideshow/Slideshow04.png" alt="Robert Mentira" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames Slideshow/Slideshow05.png" alt="Distancia Paralela" class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow05.png" alt="Distancia Paralela"
+                            class="d-block w-100">
                     </div>
                     <div class="carousel-item">
                         <img src="./media/Frames Slideshow/Slideshow06.png" alt="Pampa Trash" class="d-block w-100">
@@ -142,8 +148,7 @@
                         <img src="./media/Frames Slideshow/Slideshow07.png" alt="RIA 2" class="d-block w-100">
                     </div>
                     <div class="carousel-item">
-                        <img src="./media/Frames Slideshow/Slideshow08.png" alt="Guada backstage"
-                            class="d-block w-100">
+                        <img src="./media/Frames Slideshow/Slideshow08.png" alt="Guada backstage" class="d-block w-100">
                     </div>
                 </div>
 
